Ajout du contrôleur AnalysesController, des KPIs, graphiques et fonctionnalité Visite Carte