@@ -34,6 +34,11 @@
             <artifactId>javafx-fxml</artifactId>
             <version>17.0.12</version>
         </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-web</artifactId>
+            <version>17.0.12</version>
+        </dependency>
 
         <!-- SendGrid -->
         <dependency>
@@ -57,9 +62,12 @@
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
-                <configuration>
-                    <mainClass>com.esprit.tests.MainEspacesGUI</mainClass>
-                </configuration>
+            <configuration>
+                <mainClass>com.esprit.tests.MainEspacesGUI</mainClass>
+                <options>
+                    <option>--add-modules=javafx.controls,javafx.fxml,javafx.web</option>
+                </options>
+            </configuration>
             </plugin>
         </plugins>
     </build>
